# api/swagger.yaml
@@ -7,7 +7,7 @@ info:
     Scout is a tool for detecting relevant content in social media.
 
 security:
-  - basicAuth: [] 
+  - basicAuth: []
 
 servers:
   - url: http://localhost:5601
@@ -60,11 +60,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/profiles/{id}:
+  /api/profiles/{profileId}:
     get:
       summary: Get a profile by ID
       parameters:
-        - name: id
+        - name: profileId
           in: path
           required: true
           schema:
@@ -87,7 +87,7 @@ paths:
     put:
       summary: Update a profile by ID
       parameters:
-        - name: id
+        - name: profileId
           in: path
           required: true
           schema:
@@ -112,7 +112,7 @@ paths:
     delete:
       summary: Delete a profile by ID
       parameters:
-        - name: id
+        - name: profileId
           in: path
           required: true
           schema:
@@ -128,12 +128,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
-  /api/profiles/{id}/jumpstart:
+  
+  /api/profiles/{profileId}/jumpstart:
     post:
       summary: Jumpstart a profile - run analysis on old posts
       parameters:
-        - name: id
+        - name: profileId
           in: path
           required: true
           schema:
@@ -353,6 +353,33 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /api/statistics/{profileId}:
+    get:
+      summary: Get statistics for a profile
+      parameters:
+        - name: profileId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Statistics retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileStatistics'
+        "401":
+          description: Unauthorized
+        "404":
+          description: Profile not found
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   securitySchemes:
     basicAuth:
@@ -428,6 +455,8 @@ components:
       properties:
         name:
           type: string
+        active:
+          type: boolean
         default_settings:
           $ref: '#/components/schemas/ProfileSettingsUpdate'
           nullable: true
@@ -436,6 +465,7 @@ components:
           additionalProperties:
             $ref: '#/components/schemas/ProfileSettingsUpdate'
             nullable: true
+    
     ProfileSettingsUpdate:
       type: object
       nullable: true
@@ -540,6 +570,7 @@ components:
           $ref: '#/components/schemas/Detection'
         source_post:
           type: object
+          x-go-type: 'json.RawMessage'
         tags:
           $ref: '#/components/schemas/DetectionTags'
       required:
@@ -576,3 +607,14 @@ components:
       required:
         - subreddit
         - profiles
+
+    ProfileStatistics:
+      type: object
+      properties:
+        manual_tasks:
+          type: integer
+        auto_tasks:
+          type: integer
+      required:
+        - manual_tasks
+        - auto_tasks
